[gd_scene load_steps=2 format=3 uid="uid://cr1bac64ejd38"]

[ext_resource type="Script" uid="uid://cipfl77r7ytey" path="res://RedAnt/hud.gd" id="1_37p78"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="EnemyHealthLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_top = 10.0
offset_right = 54.0
offset_bottom = 33.0
grow_horizontal = 2
text = "Enemy Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyHealthBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.0
offset_top = 30.0
offset_right = 198.0
offset_bottom = 57.0
grow_horizontal = 2
max_value = 5.0
value = 5.0
show_percentage = false

[node name="LivesLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Lives: 3"

[node name="GameOverScreen" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.09, 0.09, 0.09, 0.705882)

[node name="Label" type="Label" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "GAME OVER"

[node name="RestartButton" type="Button" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -15.5
offset_right = 32.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Restart"
